--- a/examples/clients/fluentd/ConfigMap-fluentd.yaml
+++ b/examples/clients/fluentd/ConfigMap-fluentd.yaml
@@ -202,13 +202,11 @@ data:
       deflector_alias kubernetes
       index_prefix kubernetes
       application_name default
-      # If empty string("") is specified in index_date_patter, index date pattern is not used. Elasticsearch plugin just creates <index_prefix-application_name-000001> 
-      #index_date_pattern "now/d"
       index_date_pattern ""
       enable_ilm true
       # Policy configurations
       ilm_policy_id kubernetes
-      ilm_policy {"policy":{"phases":{"hot":{"actions":{"rollover":{"max_age":"1h","max_size":"2M"}}},"delete":{"min_age":"30d","actions":{"delete":{}}},"warm":{"actions":{"allocate":{"number_of_replicas":1},"forcemerge":{"max_num_segments":1}}}}}}
+      ilm_policy {"policy":{"phases":{"hot":{"actions":{"rollover":{"max_age":"20m","max_size":"1M"}}},"delete":{"min_age":"30d","actions":{"delete":{}}},"warm":{"actions":{"allocate":{"number_of_replicas":1},"shrink":{"number_of_shards":1},"forcemerge":{"max_num_segments":1}}}}}}
       template_name kubernetes
       template_file /etc/fluent/config.d/es-template-logstash.json
       template_overwrite true
@@ -229,15 +227,13 @@ data:
         flush_mode interval
         flush_thread_count 2
         flush_interval 10s
-        retry_forever false
-        retry_timeout 1h
+        retry_forever
         retry_type exponential_backoff
         retry_max_interval 5m
         chunk_limit_size 2M
         total_limit_size 512M
         queue_limit_length 8
-        overflow_action drop_oldest_chunk
-        disable_chunk_backup
+        overflow_action block
       </buffer>
     </match>
 
@@ -269,11 +265,11 @@ data:
       index_prefix logstash
       application_name default
       # If empty string("") is specified in index_date_patter, index date pattern is not used. Elasticsearch plugin just creates <index_prefix-application_name-000001> 
-      index_date_pattern "now/d"
+      index_date_pattern ""
       enable_ilm true
       # Policy configurations
       ilm_policy_id logstash
-      ilm_policy {"policy":{"phases":{"hot":{"actions":{"rollover":{"max_age":"1h","max_size":"2M"}}},"delete":{"min_age":"30d","actions":{"delete":{}}},"warm":{"actions":{"allocate":{"number_of_replicas":1},"forcemerge":{"max_num_segments":1}}}}}}
+      ilm_policy {"policy":{"phases":{"hot":{"actions":{"rollover":{"max_age":"20m","max_size":"1M"}}},"delete":{"min_age":"30d","actions":{"delete":{}}},"warm":{"actions":{"allocate":{"number_of_replicas":1},"shrink":{"number_of_shards":1},"forcemerge":{"max_num_segments":1}}}}}}
       template_name logstash
       template_file /etc/fluent/config.d/es-template-logstash.json
       template_overwrite true
@@ -285,15 +281,13 @@ data:
         flush_mode interval
         flush_thread_count 2
         flush_interval 10s
-        retry_forever false
-        retry_timeout 1h
+        retry_forever
         retry_type exponential_backoff
         retry_max_interval 5m
         chunk_limit_size 2M
         total_limit_size 512M
         queue_limit_length 8
-        overflow_action drop_oldest_chunk
-        disable_chunk_backup
+        overflow_action block
       </buffer>
     </match>
   es-template-logstash.json: |
