--- a/examples/clients/configurator/configs.yml
+++ b/examples/clients/configurator/configs.yml
@@ -8,8 +8,12 @@ data:
           "query:queryString:options": "{ \"analyze_wildcard\": true, \"default_field\": \"log\" }"
       defaultIndex:
         changes:
-          "defaultIndex": "kubernetes"
+          "defaultIndex": "filebeat"
     indexes:
+      filebeat:
+        attributes:
+          title: filebeat
+          timeFieldName: "@timestamp"
       kubernetes:
         attributes:
           title: kubernetes
@@ -30,35 +34,35 @@ data:
         attributes:
           title: haproxy
           timeFieldName: "@timestamp"
-  snapshots.yml: |
-    repos:                 
-      minio:                                                                                                                 
-        type: s3        
-        settings:                                             
-          bucket: elasticsearch                               
-          client: default                                     
-          base_path: el-7                                     
-    policy:                                                   
-      daily:                                                  
-        schedule: "0 30 0 * * ?"                                                                                             
-        repository: minio                                                                                                    
-        name: "<daily-snap-{now/d}>"                                                                                         
-        config:
-          ignore_unavailable: false
-        retention:
-          expire_after: "90d"
-          min_count: 5
-          max_count: 40
-      hourly:
-        schedule: "0 10 * * * ?"
-        repository: minio
-        name: "<hourly-snap-{now/H{yyyy.MM.dd.H}}>"
-        config:
-          ignore_unavailable: false
-        retention:
-          expire_after: "24h"
-          min_count: 3
-          max_count: 24
+  #snapshots.yml: |
+  #  repos:                 
+  #    minio:                                                                                                                 
+  #      type: s3        
+  #      settings:                                             
+  #        bucket: elasticsearch                               
+  #        client: default                                     
+  #        base_path: el-7                                     
+  #  policy:                                                   
+  #    daily:                                                  
+  #      schedule: "0 30 0 * * ?"                                                                                             
+  #      repository: minio                                                                                                    
+  #      name: "<daily-snap-{now/d}>"                                                                                         
+  #      config:
+  #        ignore_unavailable: false
+  #      retention:
+  #        expire_after: "90d"
+  #        min_count: 5
+  #        max_count: 40
+  #    hourly:
+  #      schedule: "0 10 * * * ?"
+  #      repository: minio
+  #      name: "<hourly-snap-{now/H{yyyy.MM.dd.H}}>"
+  #      config:
+  #        ignore_unavailable: false
+  #      retention:
+  #        expire_after: "24h"
+  #        min_count: 3
+  #        max_count: 24
 
   users.yml: |
     ---
